# qr-monsters

./: Cargo.toml  Dioxus.toml  dockerfile  fly.toml
crates/app/: Cargo.toml
crates/app/assets/: styles.css
crates/app/src/: main.rs  storage.rs
crates/app/src/components/: mod.rs  monster_avatar.rs  monster_card.rs  qr_display.rs  scanner.rs  stat_bar.rs
crates/app/src/screens/: battle.rs  detail.rs  home.rs  import.rs  mod.rs
crates/avatar/: Cargo.toml
crates/avatar/src/: lib.rs  palette.rs  svg.rs
crates/core/: Cargo.toml
crates/core/src/: battle.rs  codec.rs  gen.rs  lib.rs  monster.rs
crates/qr/: Cargo.toml
crates/qr/src/: decode.rs  encode.rs  lib.rs
