[package]
name = "qrmonsters-app"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", default-features = false, features = ["router", "signals", "hooks", "html", "launch", "macro"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
blake3 = "1"

qrmonsters-core = { path = "../core" }

# Web storage (only used on wasm)
gloo-storage = { version = "0.3", optional = true }

# Native file storage (only used on non-wasm)
directories = { version = "5", optional = true }

[features]
default = []
web = ["dep:gloo-storage", "dioxus/web"]
desktop = ["dioxus/desktop", "native"]
mobile = ["dioxus/mobile", "native"]
native = ["dep:directories"]
