[package]
name = "qrmonsters-app"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.7", default-features = false, features = ["router", "signals", "hooks", "html", "launch", "macro"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
blake3 = "1"

qrmonsters-core = { path = "../core" }
qrmonsters-qr = { path = "../qr" }
qrmonsters-avatar = { path = "../avatar" }

# For async file reading in scanner
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["File", "FileList", "FileReader", "Blob"] }

# Web storage (only used on wasm)
gloo-storage = { version = "0.3", optional = true }

# Native file storage (only used on non-wasm)
directories = { version = "5", optional = true }

[features]
default = []
web = ["dep:gloo-storage", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:js-sys", "dep:web-sys", "dioxus/web"]
desktop = ["dioxus/desktop", "native"]
mobile = ["dioxus/mobile", "native"]
native = ["dep:directories"]
