[package]
name = "qrmonsters-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4", "js"] }
rand = "0.8"
rand_chacha = "0.3"
blake3 = "1"
bincode = "1"
base64 = "0.22"
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

# For date handling in wasm
[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
